# cmpsc441_final_project

./: .gitignore  Lab 14.md  README.md  book-sources.md  config.jsonc  flake.nix  main.py  mcp_server.py  pyproject.toml  setup.py
books/: Libro Libre 2nd edition July 2021 Update.md  SpanishGrammarManual.md
client/: chat_wrapper.py  console.py  mcp_client.py  messages_wrapper.py
data/anki_exports/: es_vocab.txt
language_assistant/: chat_wrapper.py  local_dictionary.py  mcp_client.py  messages_wrapper.py  remote_dictionary.py
language_assistant/enum/: chunk_type.py
server/: dictionary_provider.py  local_dictionary.py  mcp_server.py  rag_provider.py  remote_dictionary.py  vocab_store.py
server/enum/: tool_status.py
tests/: conftest.py  test_local_dictionary.py  test_remote_dictionary.py  test_vocab_store.py
util/: chat_wrapper.py  config.py  console.py  formatting.py  llm_utils.py  messages_wrapper.py
util/enum/: chunk_type.py  role.py
