[tool.pytest.ini_options]
pythonpath = ["."]

[project]
name = "cmpsc441-final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "fastmcp>=3.2.4",
    "langchain-text-splitters>=1.1.2",
    "ollama>=0.6.1",
    "pytest>=9.0.3",
    "rich>=15.0.0",
]
